Fixes extra space in landing page on tablet screen sizes

--- a/css/_main.scss
+++ b/css/_main.scss
@@ -33,7 +33,7 @@
 .page-template-landing-page-full-width {
 	padding-top: 0;
 		
-	@include breakFirst(medium){
+	@include breakFirst(large){
 		padding-top: 150px;
 	}
 	
